about.css
@font-face {
    font-family: "VisbyLight";
    src: url("assets/fonts/visby-webfont/VisbyLight.woff");
}
@font-face {
    font-family: "VisbySemibold";
    src: url("assets/fonts/visby-webfont/VisbySemibold.woff");
}
@font-face {
    font-family: "VisbyRegular";
    src: url("assets/fonts/visby-webfont/VisbyRegular.woff");
}
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
body{
    color: #fff;
    font-family: VisbyRegular;
    font-size: 16px;
    overflow-x:hidden
}
ul{
    list-style: none;
}
a{
    text-decoration: none;
}
.header{
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    z-index: 100;
}
.navbar{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    flex-wrap: wrap;
    padding: 2.5vw 3.5vw;
    background: linear-gradient(to bottom, rgba(0,0,0, 0.2), rgba(0,0,0, 0));
    /* position: relative;
    top: 5vh; */
}
.nav-links {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    align-content: flex-end;
    /* flex-direction: row;  */
}
.nav-links>li{
    text-align: end;
}
.nav-links>li>a{
    text-decoration: none;
    color: #fff;
    font-size: 1.1rem;
    padding-bottom: 2px ;
    border-bottom: #fff 0px solid;
    cursor: pointer;
    font-family: VisbySemibold;
}
.nav-links a:hover{
    border-bottom: #fff 1px solid;
}
.logo-icon{
    height: 30px;
    align-content: center;
}
.logo-icon a img{
    max-height: 30px;
}

.hero-img {
    width: 100%;
    height: auto;
    position: relative;
    aspect-ratio: 19/9;
    overflow: hidden;
}
.hero-img img{
    width: 100%;
    height: 100%;
    object-fit: cover;
    object-position: center;
    filter:brightness(60%)
}

.background-img{
    background-image: linear-gradient(to top, rgba(0, 1, 7, 0.4), rgba(14, 0, 0, 0.4)), url("https://images.squarespace-cdn.com/content/v1/657c413edd52fa6c45683353/3567f2a5-ab7c-4cdd-8ab2-d72eff2170a6/technology-hero-image-potential.jpg?format=1500w");
    background-size: cover;
    background-repeat: no-repeat;
    background-position: 45% 50%;   
    /* height: 98vh; from to*/
    width: 100%;
    height: 100%;
}

.first-part{
    /* max-width: 100vw; */
    /* height: 50vw; */
}

.first-part .start{
    position: relatives;
    width: 100%;
}
.first-part .start strong{
    font-size: 5rem;
    font-family: VisbySemibold;
    position: absolute;
    top: 34vw;
    left: 4vw;
}

.second-part{
    color: #000;
    padding: 10vh 20vw 0;
    width: 100vw;
    text-align: left;
    background-color: #f6f6f6;
}

.second-part h1{
    font-size: 3.2rem;
    font-family: VisbySemibold;
    padding: 2vw 0;
    line-height: 1;
}

.section p{
    font-size: 1.1rem;
    font-family: VisbySemibold;
    line-height: 1.5;
    padding: 1rem 0px;
}
.section p:last-child{
    padding: 0px 0px 120px 0px;
}
.third-part{
    padding: 10vh 20vw 0;
    /* height: 950px; */
    width: 100%;
    color: #000;
    background: linear-gradient(to bottom, rgba(227, 218, 210, 0.886),rgba(227, 218, 210, 0.788)), url("https://images.squarespace-cdn.com/content/v1/657c413edd52fa6c45683353/31bac1e5-c1d2-4d73-beb2-893e069a94c7/Potential-Contours.png?format=1500w") no-repeat center;
}
.third-part h3:first-child{
    font-size: 3.2rem;
    font-family: VisbySemibold;
    padding: 2rem 0 2rem;
    line-height: 1;
}
.underline-span{
    text-decoration: underline;
}

.forth-part{
    height: 98vh;
    width: 100%;
    background-image: url("https://images.squarespace-cdn.com/content/v1/657c413edd52fa6c45683353/1b54ddc7-a592-48e6-8fcf-966a7bc27ad7/about-header-1600x900.jpg?format=1500w");
    background-repeat: no-repeat;
    background-size: cover;
   background-position: 70% 50%;
}

.fifth-part{
    width: 100vw;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
}
.fifth-part article{
    display: flex;
    flex-direction: row;
    color: black;
}
.fifth-part article section{
    width: 50%;
    height: 95vh;
    justify-items: flex-start;
    align-content: center;
}
.paragraph{
    color: black;
    font-size: 1.1rem;
    font-family: VisbySemiBold;
    line-height: 1.5;
    padding-left: 4vw;
    padding-right: 15vw;
}
.fifth-part article section img{
    max-height: 100vh;
    object-fit: cover;
}
.fifth-part article section h3{
    font-size: 3rem;
    padding-bottom: 3vh;
}

.img-background{
    background-size: cover;
}
.img-1{
    background-image: url("https://images.squarespace-cdn.com/content/v1/657c413edd52fa6c45683353/0cb4bb40-0b59-4b54-9743-b8714232da1d/who-we-are-1000.jpg?format=1500w");
    background-position: 30% 40%;
}
.img-2{
    background-image: url("https://images.squarespace-cdn.com/content/v1/657c413edd52fa6c45683353/b6a99d2e-691e-43c3-91ff-a9a2636a5af0/what-we-believe-1000.jpg?format=1500w");
    background-position: center;
}
.img-3{
    background-image: url("https://images.squarespace-cdn.com/content/v1/657c413edd52fa6c45683353/02feef0e-77a6-4856-961e-7172e9fc3301/real-world-testing-1000.jpg?format=1500w");
    background-position: 40% 40%;
}


.six-part{
    background-color: #50624C;
    color: #fff;
    width: 100vw;
    padding: 0 4rem;
}
.leadership-heading {
    text-align: center;
    padding-top: 10rem;
    padding-bottom: 5rem;
}
.six-part h3 {
    font-size: 3.2rem;
    font-family: VisbySemiBold;
}
.six-part ul{
    display: grid;
    grid-template-columns: repeat(4, auto);
    /* grid-auto-flow: column; */
    grid-gap: 2rem;
    overflow-x: auto;
    scrollbar-width: thin;
    text-align: center;
}
.six-part ul li{
    line-height: 50px;
    white-space: nowrap;
}
.six-part ul li>button{
    background: none;
    border: none;
    outline: none;
    box-shadow: none;
    font-size: 1.3rem;
    font-family: VisbySemiBold;
    color: #fff;
}
.six-part ul li:hover{
    border-bottom: 3px solid #000;
}
.six-part ul li.active {
    border-bottom: 3px solid #000;
}
.outer-div{
    display: grid;
    grid-template-columns: 34% 40%;
    justify-content: space-evenly;
    padding: 4rem 0rem;
}
/* ... */

